HTML ---> src directory

--- a/src/main.html
+++ b/src/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="src/styles/main.css">
+    <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
@@ -67,5 +67,5 @@
     </div>
 </div>
 </body>
-<script src="src/js/main.js"></script>
+<script src="js/main.js"></script>
 </html>
